@@ -1127,7 +1127,8 @@ If this option is used several times, the last one will be used.
 .IP "--max-redirs <num>"
 Set maximum number of redirection-followings allowed. If \fI-L/--location\fP
 is used, this option can be used to prevent curl from following redirections
-\&"in absurdum".
+\&"in absurdum". By default, the limit is set to 50 redirections. Set this
+option to -1 to make it limitless.
 
 If this option is used several times, the last one will be used.
 .IP "-0/--http1.0"
